--- a/10.2.0/angular/src/account/login/login.component.html
+++ b/10.2.0/angular/src/account/login/login.component.html
@@ -3,38 +3,24 @@
     <form novalidate autocomplete="off" #loginForm="ngForm" (ngSubmit)="login()">
         <div class="form-group">
             <div class="input-group">
-                <input
-                    type="text"
-                    class="form-control"
-                    name="userNameOrEmailAddress"
+                <input type="text" class="form-control" name="userNameOrEmailAddress"
                     [(ngModel)]="authService.authenticateModel.userNameOrEmailAddress"
-                    [placeholder]="'UserNameOrEmail' | localize"
-                    required
-                    maxlength="256"
-                    #userNameOrEmailAddressModel="ngModel"
-                    #userNameOrEmailAddressEl />
+                    [placeholder]="'UserNameOrEmail' | localize" required maxlength="256"
+                    #userNameOrEmailAddressModel="ngModel" #userNameOrEmailAddressEl />
                 <div class="input-group-append">
                     <div class="input-group-text">
                         <span class="fas fa-user"></span>
                     </div>
                 </div>
             </div>
-            <abp-validation-summary
-                [control]="userNameOrEmailAddressModel"
+            <abp-validation-summary [control]="userNameOrEmailAddressModel"
                 [controlEl]="userNameOrEmailAddressEl"></abp-validation-summary>
         </div>
         <div class="form-group">
             <div class="input-group">
-                <input
-                    type="password"
-                    class="form-control"
-                    name="password"
-                    [(ngModel)]="authService.authenticateModel.password"
-                    [placeholder]="'Password' | localize"
-                    required
-                    maxlength="32"
-                    #passwordModel="ngModel"
-                    #passwordEl />
+                <input type="password" class="form-control" name="password"
+                    [(ngModel)]="authService.authenticateModel.password" [placeholder]="'Password' | localize" required
+                    maxlength="32" #passwordModel="ngModel" #passwordEl />
                 <div class="input-group-append">
                     <div class="input-group-text">
                         <span class="fas fa-lock"></span>
@@ -57,22 +43,20 @@
                     </label>
                 </div>
             </div>
-            <div class="col-md-4">
-                <button
-                    type="submit"
-                    class="btn btn-primary btn-block"
+            <div class="col-md-4 d-flex justify-content-center mx-auto">
+                <button type="submit" class="btn btn-primary btn-block"
                     [disabled]="!loginForm.form.valid || submitting">
                     {{ 'LogIn' | localize }}
                 </button>
             </div>
         </div>
     </form>
-    @if (isSelfRegistrationAllowed) {
+    <!-- @if (isSelfRegistrationAllowed) {
         <p class="mb-1">
             <a [routerLink]="['../register']">
                 <i class="fa fa-plus-circle"></i>
                 {{ 'Register' | localize }}
             </a>
         </p>
-    }
+    } -->
 </div>
